Fixing overflow

--- a/inc/theme/style.css
+++ b/inc/theme/style.css
@@ -89,8 +89,8 @@ input[type=submit] {
   top:0px;
   bottom: 0px;
   left: 0px;
-  width: 250px;
-  border-right: 1px solid var(--main);
+  width: 350px;
+  overflow-y: scroll;
 }
 
 #page-middle-right {
@@ -98,7 +98,7 @@ input[type=submit] {
   top:0px;
   bottom:0px;
   right:0px;
-  left:250px;
+  left:350px;
 }
 
 #page-middle-right-top {
@@ -108,6 +108,7 @@ input[type=submit] {
   right: 0px;
   bottom: 50%;
   border-bottom: 1px solid var(--main);
+  overflow-y: scroll;
 }
 
 #page-middle-right-bottom {
